# openenv-faultline

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.inference  Makefile  README.md  blog.md  inference.py  openenv.yaml  pyproject.toml  pyrightconfig.json  start.sh
dashboard/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite-plugin-scenarios.ts  vite.config.ts
dashboard/scripts/: csv-to-episode.cjs
dashboard/src/: App.tsx  RunSelector.tsx  index.css
docs/: inference.md  training.md
evals/: run_red_blue_benchmark.py
internal/docs/: JudgementCriteria.md  SubmissionRequirements.md  Themes.md
internal/ideas/: PLAN.md  cyber-arena-full-analysis.md  cyber-arena-red-vs-blue.md
mesh/: registry.json
mesh/auth/: config.json  index.ts  package.json
mesh/gateway/: config.json  index.ts  package.json  tsconfig.json
mesh/worker/: config.json  index.ts  job_generator.ts  job_generator_config.json  package.json
outputs/docker_hf_faultline_red_qwen3_8b_20260426_060614/: steps.csv  summary.csv
outputs/docker_hf_vs_openrouter_faultline_red_qwen3_8b_20260426_065955/: steps.csv  summary.csv
outputs/docker_hf_vs_openrouter_wargames_red_qwen3_8b_20260426_065955/: steps.csv  summary.csv
outputs/docker_hf_wargames_red_qwen3_8b_20260426_051006/: steps.csv  summary.csv
outputs/docker_hf_wargames_red_qwen3_8b_20260426_060614/: steps.csv  summary.csv
outputs/docker_opencode_minimax_m27_20260425_133613/: steps.csv  summary.csv
outputs/docker_openrouter_claude_sonnet46_20260425_144011/: steps.csv  summary.csv
outputs/docker_openrouter_claude_sonnet46_20260425_161151/: steps.csv  summary.csv
scripts/: _merge_inner.py  merge_and_push_on_hf.py  pull_and_push_adapter.py  repair_hf_chat_template.py
server/: app.py
tests/: test_benchmark_runner.py  test_blue_defender.py  test_contracts.py  test_env_integration.py  test_inference.py  test_metrics_poller.py  test_process_manager.py  test_reward.py
training/: README.md
(+78 files in other folders)
